--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}contacto123{% endblock %}
+{% block contacto %} text-secondary {% endblock %}
 
 {% block content %}
     hola buenas tardes
