--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}estudios{% endblock %}
+{% block hobbies %} text-secondary {% endblock %}
 
 {% block content %}
     <div class="container">
