--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}home{% endblock %}
+{% block home %} text-secondary {% endblock %}
 
 {% block content %}
     <div class="container">
