todas las paginas hechas

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,7 +1,20 @@
 {% extends 'base.html' %}
-{% block title %}contacto123{% endblock %}
+
+{% block title %}Contacto{% endblock %}
+
 {% block contacto %} text-secondary {% endblock %}
 
 {% block content %}
-    hola buenas tardes
+<div class="container py-5">
+    <h1 class="text-center mb-4">Contacto</h1>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <ul class="list-group">
+                <li class="list-group-item"><strong>Dirección:</strong> Calle Playa de Matalascañas, Sevilla, Nº 6, 2ºB, 41009</li>
+                <li class="list-group-item"><strong>Teléfono:</strong> 684 232 245</li>
+                <li class="list-group-item"><strong>Email:</strong> guillermoremesa@gmail.com</li>
+            </ul>
+        </div>
+    </div>
+</div>
 {% endblock %}
