--- a/templates/estudios.html
+++ b/templates/estudios.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %}
 
-{% block title %}estudios{% endblock %}
-{% block estudios %} text-secondary {% endblock %}
+{% block title %}Estudios{% endblock %}
+
+{% block estudios %} active {% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h1>Estudios</h1>
-                <p>En esta sección se mostrarán los estudios realizados por el usuario.</p>
-            </div>
-        </div>
-    </div>
+<div class="container py-5">
+    <h1 class="text-center mb-4">Formación Académica</h1>
+    <ul class="list-group">
+        <li class="list-group-item">Grado Medio en Sistemas Microinformáticos y Redes - SAFA (2021-2023). Nota media: 9</li>
+        <li class="list-group-item">ESO en Calderón de la Barca (2019-2021). Nota media: 7.7</li>
+        <li class="list-group-item">Primaria en Calderón de la Barca (2008-2018)</li>
+        <li class="list-group-item">Estudio de Multiplataforma 2º grado superior (En proceso)</li>
+        <li class="list-group-item">Titulación A1-A3 y STS1 y STS2 en pilotaje de drones</li>
+        <li class="list-group-item">Titulación de Inglés - B1</li>
+    </ul>
+</div>
 {% endblock %}
