todas las paginas hechas

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -7,9 +7,10 @@
 {% block content %}
 <div class="container py-5">
     <h1 class="text-center mb-4">Contacto</h1>
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <ul class="list-group">
+    <div class="card shadow-lg border-0">
+        <div class="card-body">
+            <h5 class="card-title text-primary">Información de Contacto</h5>
+            <ul class="list-group list-group-flush">
                 <li class="list-group-item"><strong>Dirección:</strong> Calle Playa de Matalascañas, Sevilla, Nº 6, 2ºB, 41009</li>
                 <li class="list-group-item"><strong>Teléfono:</strong> 684 232 245</li>
                 <li class="list-group-item"><strong>Email:</strong> guillermoremesa@gmail.com</li>
