--- a/templates/experiencia.html
+++ b/templates/experiencia.html
@@ -2,7 +2,7 @@
 
 {% block title %}Experiencia{% endblock %}
 
-{% block experiencia %} active {% endblock %}
+{% block experiencia %} text-secondary {% endblock %}
 
 {% block content %}
 <div class="container py-5">
